[package]
name = "p0_rust"
version = "0.1.0"
authors = ["Nico Stepan <stepannj@mcmaster.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3